fix(a11y): clickable elements visible on focus (#1148)
* fix: sf-collected-product with visible button on focus

* fix: sf-product-card with visible buttons on focus

* fix: cart with visible buttons on focus

--- a/packages/shared/styles/components/organisms/SfProductCard.scss
+++ b/packages/shared/styles/components/organisms/SfProductCard.scss
@@ -67,6 +67,9 @@
     display: var(--product-card-add-button-display, none);
     transform: var(--product-card-add-button-transform, translate3d(0, 50%, 0));
     opacity: var(--product-card-add-button-opacity, 0);
+    &:focus {
+      --product-card-add-button-opacity: 1;
+    }
     &--icons-enter-active {
       animation: var(--product-card-add-button-enter-animation, bounce 0.4s);
     }
@@ -110,6 +113,10 @@
       --product-card-wishlist-icon-transition,
       opacity 150ms ease-in-out
     );
+    cursor: pointer;
+    &:focus {
+      --product-card-wishlist-icon-opacity: 1;
+    }
   }
   &--on-wishlist {
     --product-card-wishlist-icon-opacity: 1;
